RESOLVED FIXED120480
Fix slider thumb event handling to use local, not absolute coordinates
https://bugs.webkit.org/show_bug.cgi?id=120480
Summary Fix slider thumb event handling to use local, not absolute coordinates
Simon Fraser (smfr)
Reported 2013-08-29 10:50:43 PDT
Fix slider thumb event handling to use local, not absolute coordinates
Attachments
Patch (5.05 KB, patch)
2013-08-29 10:52 PDT, Simon Fraser (smfr)
no flags
Patch (5.62 KB, patch)
2013-08-29 11:20 PDT, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2013-08-29 10:52:51 PDT
Early Warning System Bot
Comment 2 2013-08-29 11:01:35 PDT
Early Warning System Bot
Comment 3 2013-08-29 11:03:10 PDT
Simon Fraser (smfr)
Comment 4 2013-08-29 11:20:10 PDT
Darin Adler
Comment 5 2013-08-29 11:59:09 PDT
Comment on attachment 210004 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=210004&action=review > Source/WebCore/ChangeLog:16 > + No behavior change. Is there any test coverage for this? > Source/WebCore/html/shadow/SliderThumbElement.cpp:271 > + RenderBox* inputRenderer = toRenderBox(input->renderer()); > + RenderBox* trackRenderer = trackElement->renderBox(); In modern code we like to use references for things that can’t be null. I would use references for these two local variables.
Simon Fraser (smfr)
Comment 6 2013-08-29 12:15:04 PDT
Note You need to log in before you can comment on or make changes to this bug.